--- a/spring-session-simple/src/main/webapp/WEB-INF/web.xml
+++ b/spring-session-simple/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,19 @@
   <welcome-file-list>
     <welcome-file>/login</welcome-file>
   </welcome-file-list>
+
+
+	<!--web.xml spring session基于拦截器处理-->
+	<filter>
+		<filter-name>springSessionRepositoryFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSessionRepositoryFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
   <!-- 读取spring配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
